# groot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  groot.g4  grootListenerImpl.cpp  grootListenerImpl.h  main.cpp  native_method.cpp  native_method.h  scope.cpp  scope.h  visitor.cpp  visitor.h
doc/: README.md
docs/: README.md  index.html  index.md
docs/steps/: 01_install_dependencies.md  02_running_antlr.md  03_create_build_project.md  03a_support_tests.md  04_create_primitive_values.md  05_create_add_expression_grammar.md  06_create_multiply_expression_grammar.md  07_create_power_expression.md  08_create_unary_op_expression.md  09_create_value_object.md  10_add_scope_object.md  11_support_assignment_statement.md  12_support_comparison_expression.md  13_support_return_statement.md  14_support_block.md  15_support_while_statement.md  16_support_if_statement.md  17_support_else_statement.md  18_support_function_definition.md  19_support_function_call.md  20_support_string.md  22_support_character_data_type.md  23_support_lists.md  24_support_list_indexing.md  25_support_native_methods.md  26_llvm_library_inclusion.md  3b_visitor_overview.md
example/: test.groot
jit/: jit.cpp
parser/: README.md
tests/: parser_tests.cpp
